--- a/style.css
+++ b/style.css
@@ -64,4 +64,8 @@ body{
         margin-left: 30px;
         vertical-align: top;
     };
+
+    footer{
+      background-color: #00000060
+    };
 };
