--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ body{
       background-color: #00000060;
       margin-left: 0px;
       margin-right: 0px;
-      position: absolute;
-      bottom: 0px;
+      margin-top: auto;
     };
 };
