--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 @charset "UTF-8";
 body{
+  /*--テキスト関係--*/
     text-align: center;
     font-family: "Shippori Mincho B1", serif;
     color: #ffffff;
 
     /*--background関係--*/
-    margin-left: 150px;
-    margin-right: 150px;
     background-color: #000000;
     background-image: url(image/BOATBY.png),url(image/OCEAN.png);
     background-size: cover;
+
+    #main_intro{
+      margin-left: 150px;
+      margin-right: 150px;
+    };
 
     li{
       display: inline-block;
