padding: 0px;をbody全体に適用

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
   /*--テキスト関係--*/
     text-align: center;
+    padding: 0px;
     font-family: "Shippori Mincho B1", serif;
     color: #ffffff;
 
