--- a/style.css
+++ b/style.css
@@ -19,18 +19,22 @@ body{
 
     };
 
-    #si{
+    #si{ /*画像が20px下にズレるなら-20px下に動かせばいいんですよね*/
       padding-top:0px;
       margin-top:-20px;
     }
 
-    .sidebar {
+    .sidebar { /*sidebar.htmlで読み込まれてます*/
       background-color: #895aa150;
       margin-top:0px;
       width:200px;
       height: 100%;
-      text-align:center;
+      text-align:left;
     } 
+
+    .sidebarmoji{ /*サイドバーの画像以外の部分にpaddingを設定*/
+      padding:10px;
+    }
 
     .main {
       
@@ -121,4 +125,12 @@ body{
       width: 100%;
     }
 
+    #sidebarlink{
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    #sidebarlink:hover{
+      color: #d6abff;
+     }
 };
