--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
     #main_intro{
     /*--background関係--*/
-
+    /*ここ空だからエラー出るけどまあしゃあないねbyMoku*/
     };
 
     #si{ /*画像が20px下にズレるなら-20px下に動かせばいいんですよね*/
